[gd_scene load_steps=12 format=3 uid="uid://c8p4obawy6bel"]

[ext_resource type="Script" uid="uid://b5qhu387qogj7" path="res://src/GameManager.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://obrgfbqo1mmf" path="res://assets/Menu/nbSplash.png" id="2"]
[ext_resource type="PackedScene" uid="uid://duqvai3qj7r4k" path="res://src/menu/Menu.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dhubh3kcqgnvq" path="res://src/AudioPlayer.tscn" id="4"]
[ext_resource type="Environment" path="res://default_environment.tres" id="5"]
[ext_resource type="FontFile" uid="uid://dr6f781ijisk4" path="res://assets/Fonts/mago3.3.ttf" id="5_lm1nf"]
[ext_resource type="PackedScene" uid="uid://bm8dps8elwshg" path="res://src/hud/Hud.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://5dowgbtqyq8g" path="res://src/ShaderOverlay.tscn" id="7"]

[sub_resource type="Environment" id="2"]

[sub_resource type="Animation" id="1"]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chsie"]
_data = {
&"start": SubResource("1")
}

[node name="GameManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="gameViewport" type="SubViewportContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SubViewport" type="SubViewport" parent="gameViewport"]
disable_3d = true
handle_input_locally = false
audio_listener_enable_2d = true
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="LevelHolder" type="Node2D" parent="gameViewport/SubViewport"]
process_mode = 1

[node name="HudLayer" type="CanvasLayer" parent="gameViewport/SubViewport"]

[node name="HUD" parent="gameViewport/SubViewport/HudLayer" instance=ExtResource("6")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="gameViewport/SubViewport"]
environment = ExtResource("5")

[node name="menuViewport" type="SubViewportContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SubViewport" type="SubViewport" parent="menuViewport"]
disable_3d = true
handle_input_locally = false
audio_listener_enable_2d = true
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="Menu" parent="menuViewport/SubViewport" instance=ExtResource("3")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="menuViewport/SubViewport"]
environment = SubResource("2")

[node name="Debug" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 156.0
offset_right = 40.0
offset_bottom = 179.0
theme_override_fonts/font = ExtResource("5_lm1nf")
theme_override_font_sizes/font_size = 16

[node name="BootSplash" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="BootSplash"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="BootSplash"]
libraries = {
&"": SubResource("AnimationLibrary_chsie")
}
autoplay = "start"

[node name="AudioPlayer" parent="." instance=ExtResource("4")]

[node name="ShaderOverlay" parent="." instance=ExtResource("7")]
